--- a/default.css
+++ b/default.css
@@ -56,7 +56,7 @@ section {
     border-color: black;
 }
 
-.page {
+body {
   background-color: var(--background-color);
   color: var(--primary-color);
 }
